<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".peoplepinpoint.ui.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/create_a_new_account_text_view_sign_up"
            android:textColor="@color/accent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_edit_text_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:hint="@string/name_edit_text_sign_up"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/accent" />

        <EditText
            android:id="@+id/email_edit_text_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:hint="@string/email_edit_text_sign_up"
            android:inputType="textEmailAddress"
            android:textColor="@color/accent" />

        <EditText
            android:id="@+id/password_edit_text_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:hint="@string/password_edit_text_sign_up"
            android:inputType="textPassword"
            android:textColor="@color/accent" />

        <EditText
            android:id="@+id/confirm_password_edit_text_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:hint="@string/confirm_password_edit_text_sign_up"
            android:inputType="textPassword"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/sign_up_button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/big_margin"
            android:layout_marginRight="@dimen/big_margin"
            android:text="@string/sign_up_button_sign_up"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
